Fix top and bottom padding, as well as spacing between caption and content on mobile

--- a/app/email/templates/assignment/style.scss
+++ b/app/email/templates/assignment/style.scss
@@ -52,10 +52,11 @@ $email-button: #0047bb;
         .caption {
             padding-left: 16px;
             padding-right: 16px;
-
+            padding-top: 16px;
             padding-bottom: 14px;
 
             @include desktop-all {
+                padding-top: 0 !important;
                 padding-left: 24px !important;
                 padding-right: 24px !important;
             }
